RESOLVED FIXED304557
Fix various memory leaks in LocalAuthenticator.mm
https://bugs.webkit.org/show_bug.cgi?id=304557
Summary Fix various memory leaks in LocalAuthenticator.mm
Ryosuke Niwa
Reported 2025-12-20 18:15:00 PST
Static analyzer caught a few memory leaks in Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm. Fix them.
Attachments
Ryosuke Niwa
Comment 1 2025-12-20 18:17:05 PST
EWS
Comment 2 2025-12-20 21:33:35 PST
Committed 304834@main (647adbdc0410): <https://commits.webkit.org/304834@main> Reviewed commits have been landed. Closing PR #55755 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-20 21:34:13 PST
Note You need to log in before you can comment on or make changes to this bug.