Fix various memory leaks in LocalAuthenticator.mm https://bugs.webkit.org/show_bug.cgi?id=304557

Reviewed by Wenson Hsieh.

Address the clang static analyzer warnings to fix memory leaks.

No new tests since there should be no behavioral changes beyond memory leaks being fixed.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticatorInternal::performEnterpriseAttestation):

Canonical link: https://commits.webkit.org/304834@main